--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Major Ursa
+title : Underhill Labs
 tagline: Emacs, Java, Drupal 
 author :
   name : Bart Lantz
