updated posts to show related posts

--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,11 @@ JB :
   # Set 'provider' to false to turn commenting off globally.
   #
   comments :
-    provider : disqus
+    #provider : disqus
+    provider : 
     disqus :
-      short_name : jekyllbootstrap
+      #short_name : jekyllbootstrap
+      short_name : 
     livefyre :
       site_id : 123
     intensedebate :
